<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:text="@string/choose_new_status"/>

    <RadioGroup
        android:id="@+id/chooser_layout"
        android:layout_marginStart="16dp"
        android:layout_below="@id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/state_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/status_new"
            android:text="@string/status_new"/>

        <RadioButton
            android:id="@+id/state_processing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/status_processing"
            android:text="@string/status_processing"/>

        <RadioButton
            android:id="@+id/state_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/status_completed"
            android:text="@string/status_completed"/>

        <RadioButton
            android:id="@+id/state_rejected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/status_rejected"
            android:text="@string/status_rejected"/>





    </RadioGroup>



    <TextView
        android:id="@+id/yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/chooser_layout"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/primaryTextColorDark"
        android:text="@string/yes"/>
    <TextView
        android:id="@+id/no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/yes_btn"
        android:layout_below="@id/chooser_layout"
        android:paddingBottom="16dp"
        android:textSize="18sp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/no"/>

</RelativeLayout>