<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/headerTextSize"
            android:textColor="@color/primaryTextColor"
            android:text="@string/set_password"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/newsMoreTextSize"
                android:backgroundTint="@android:color/white"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:hint="@string/hint_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/password_retype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/newsMoreTextSize"
                android:backgroundTint="@android:color/white"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:hint="@string/hint_password_retype"/>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:textColor="@color/whiteTextColor"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>