<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textSize="33sp"
            android:text="Battery"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <EditText
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:backgroundTint="@color/app_bg_dark"
                android:inputType="textMultiLine"
                android:lines="5"
                android:hint="@string/details"/>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:textColor="@color/whiteTextColor"
            android:drawableStart="@drawable/ic_save"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/add_to_cart"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/add_favorite_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:textColor="@color/whiteTextColor"
            android:drawableStart="@drawable/ic_baseline_favorite_24"
            android:drawableTint="@android:color/white"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/add_to_favorite"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>





</androidx.core.widget.NestedScrollView>