<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:text="@string/check_your_details"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_margin="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/cart_item_bg"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/person"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_phone"
                android:tint="@android:color/black"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/person"
                android:layout_alignTop="@id/person"
                android:layout_alignBottom="@id/person"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="user name"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/cart_item_bg"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/phone_image"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_phone"
                android:tint="@android:color/black"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/phone_image"
                android:layout_alignTop="@id/phone_image"
                android:layout_alignBottom="@id/phone_image"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="0932498723"/>

        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/cart_list_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical" />


        <Button
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/select_date"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_date"
            android:background="@drawable/login_button_bg"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <Button
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/from"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_time"
            android:background="@drawable/login_button_bg"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>


        <Button
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/to"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_time"
            android:background="@drawable/login_button_bg"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:background="@drawable/button_bg_black" />

    </LinearLayout>






</androidx.core.widget.NestedScrollView>